--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "graphql-yoga": "^1.18.3",
     "mongodb": "^3.3.4",
     "request": "^2.88.0",
+    "uuid": "^3.3.3",
+    "uuid.v4": "^1.0.0",
     "yargs": "^14.2.0"
   }
 }
